# geometry

./: .gitignore  Cargo.toml  Makefile  README.md  decoder.py  docker-compose.yaml  go.mod  main.go  main.py  makefile  objdecoder.py  package-lock.json  package.json  req.txt  requirements.txt  test.css  test.css.map  test.html  test.js  test.scss  todo.txt  windowmove.html
backend/: Dockerfile  main.py  requirements.txt
cpplib/: CMakeLists.txt  README.md  decoder.cpp  main.cpp
cpplib/lib/: CMakeLists.txt  lib.cpp  lib.h
data.geojson/: jpn_airports.geojson  jpn_builtupa.geojson  jpn_coastline.geojson  jpn_ferryt.geojson  jpn_inwatera.geojson  jpn_miscp.geojson  jpn_portp.geojson  jpn_railstations.geojson
data.geotiff/: lc.tfw
decoder/: Cargo.toml  decoder.py  makefile
decoder/src/: main.rs
html/: api.html
html/api/: index.html  script.js  style.css
mesh/: cube.txt
model/: model.go
public/: index.html
python/: button.py  classes.py  lib.py  main.py  requirements.txt
python/shaders/: shader.frag  shader.vert
router/: api.go  geojson.go  geotiff.go  router.go
rust/: Cargo.toml
rust/src/: collections.rs  enums.rs  main.rs  ownership.rs  structs.rs
rustgl/: Cargo.toml
rustgl/src/: main.rs
rustlib/src/: lib.rs
shaders/: shader.frag  triangle.vert
src/: App.css  App.js  MyClasses.js  PrimaryBar.jsx  main.rs
tests/: CMakeLists.txt  main.cpp
tests/glad/src/: glad.cpp
tests2/: fragment1.glsl  fragment2.glsl  fragment3.glsl  main.cpp  makefile  readme.md  vertex.glsl
tests2/glad/include/glad/: glad.h
